Add local bootstrap reference.

--- a/index.html
+++ b/index.html
@@ -2,14 +2,18 @@
 <head>
     <title>Shopping cart</title>
      <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="./Styles/bootstrap.min.css">
  </head>
 <body>
     <div class="container">
         <!---Nav-->
         <div class="row">
-            <div class="container"> Nav
-            </div>
+            <div class="container"> 
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">Nav
+                    <button type="button" class="navbar-toggle>
+             </div>
+        </div>
         </div>
           <!---Header-->
         <div class="row">
