NavBar class has been added.

--- a/index.html
+++ b/index.html
@@ -5,32 +5,19 @@
     <link rel="stylesheet" href="./Styles/bootstrap.min.css">
  </head>
 <body>
-    <div class="container">
+    <div class="container"> 
         <!---Nav-->
         <div class="row">
-            <div class="container"> 
-                <!-- Brand and toggle get grouped for better mobile display -->
-                <div class="navbar-header">Nav
-                    <button type="button" class="navbar-toggle>
-             </div>
+            <div class="navbar navbar-default">
+                </div>
         </div>
-        </div>
-          <!---Header-->
-        <div class="row">
-            <div class="container"> Header
-             </div>
-        </div>
-          <!---Page content-->
-         <div class="row">
-            <div class="container"> Page Content
-             </div>
-        </div>
+         <!---Header-->
+        <div class="row">Header</div>
+         <!---Page content-->
+         <div class="row"> Page Content</div>
          <!---Footer content-->
-         <div class="row">
-            <div class="container"> Footer
-             </div>
-        </div>
-    </div>
+         <div class="row">Footer</div>
+ </div>
 
 </body>
 </html>
