--- a/index.html
+++ b/index.html
@@ -8,9 +8,23 @@
     <div class="container"> 
         <!---Nav-->
         <div class="row">
-            <div class="navbar navbar-default">
+             <!---Navbar-->
+            <nav class="navbar navbar-inverse navbar-fixed-top">
+                 <!---Container fluid-->
+                <div class="continer-fluid">
+                     <!---navbar Header-->
+                    <div class="navbar-header">
+                        <a class="navbar-brand" href="#">Shopping cart</a>
+                    </div>
+                    <ul class="nav navbar-nav">
+                        <li class="active"><a href="#">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Help</a></li>
+                    </ul>
                 </div>
-        </div>
+            </nav>
+    </div>
+      
          <!---Header-->
         <div class="row">Header</div>
          <!---Page content-->
