--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <!---Nav-->
         <div class="row">
              <!---Navbar-->
-            <nav class="navbar navbar-inverse navbar-fixed-top">
+            <nav class="navbar navbar-fixed-top navbar-inverse">
                  <!---Container fluid-->
                 <div class="continer-fluid">
                      <!---navbar Header-->
