--- a/help.html
+++ b/help.html
@@ -1,9 +1,8 @@
 <html>
 <head>
-    <title>Shopping cart</title>
+    <title>Help</title>
      <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="./Styles/bootstrap.css">
-    <link rel="stylesheet" href="./Styles/style.css">
  </head>
 <body>
     <div class="container"> 
@@ -15,31 +14,24 @@
                 <div class="continer-fluid">
                      <!---navbar Header-->
                     <div class="navbar-header">
-                        <a class="navbar-brand" href="#">Shopping cart</a>
+                        <a class="navbar-brand" href="index.html">Shopping cart</a>
                     </div>
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="help.html">Help</a></li>
+                        <li ><a href="index.html">Home</a></li>
+                        <li ><a href="about.html">About</a></li>
+                        <li class="active"><a href="help.html">Help</a></li>
                     </ul>
                 </div>
             </nav>
     </div>
-</div>
-<div class="mainbody">
-    sfsfs
-    <div class="container">
-        <!---Header-->
+         <!---Header-->
         <div class="row">
-                <div class="col-md-12"></div>
-        </div>
-        </div>
+            Help</div>
          <!---Page content-->
          <div class="row"> Page Content</div>
-        
- </div>
-  <!---Footer content-->
+         <!---Footer content-->
          <div class="row">Footer</div>
-</div>
+ </div>
+
 </body>
 </html>
