--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
             </nav>
     </div>
 </div>
+<div class="Header">
+    <h1>Online purchasing made easy<h1>
+</div>
 <div class="mainbody">
-    sfsfs
-    <div class="container">
+     <div class="container">
         <!---Header-->
         <div class="row">
                 <div class="col-md-12"></div>
