Grid and footer has been added.

--- a/index.html
+++ b/index.html
@@ -27,21 +27,67 @@
     </div>
 </div>
 <div class="Header">
-    <h1>Online purchasing made easy<h1>
+  <!---Header-->
+   Online purchasing made easy
 </div>
 <div class="mainbody">
      <div class="container">
-        <!---Header-->
         <div class="row">
                 <div class="col-md-12"></div>
         </div>
-        </div>
-         <!---Page content-->
-         <div class="row"> Page Content</div>
-        
- </div>
-  <!---Footer content-->
-         <div class="row">Footer</div>
+     </div>
+    <!---Page content-->
+    <div class="row"> 
+        <div class="container">
+             <!---Main Panel-->
+                 <div class="panel panel-primary">
+                     <!---Panel Header-->
+                     <div class="panel panel-heading">
+                         Product Listing
+                     </div>
+                     <!---Panel Body-->
+                     <div class="panel-body">
+                         <div class="row">
+                             <div class="col-md-2">Filter By</div>
+                             <div class="col-md-4"><input type="text"/></div>
+                         </div>
+                        <!---Table-->
+                        <div class="table-responsive">
+                            <table class="table">
+                                <thead>
+                                    <tr>
+                                        <th>Image</th>
+                                        <th>Product description</th>
+                                        <th>Price</th>
+                                        <th>Purchase</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>sds</td>
+                                        <td>sds</td>
+                                        <td>sds</td>
+                                        <td>sds</td>
+                                    </tr>
+                                    <tr>
+                                        <td>sds</td>
+                                        <td>sds</td>
+                                        <td>sds</td>
+                                        <td>sds</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                     </div>
+                 </div>
+         </div>
+    </div>
+  </div>
 </div>
+<div class="footer">
+    <div class="container"> 
+        <!---Nav-->
+        <div class="row">
+            <footer>  Help | About us | contact us | blog  </footer>
+      </div>
 </body>
 </html>
