--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
      <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="./Styles/bootstrap.css">
     <link rel="stylesheet" href="./Styles/style.css">
- </head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  </head>
 <body>
 <div ng-controller="cartCntrl">
    
@@ -36,9 +37,9 @@
    Online purchasing made easy  
 </div>
 <div class="mainbody">
-     <div class="container">
+     <div class="container cart">
         <div class="row">
-                <div class="col-md-12"></div>
+                <div class="col-md-12 "><i class="fa fa-cart-arrow-down fa-2x" aria-hidden="true"></i> cart</div>
         </div>
      </div>
     <!---Page content-->
@@ -57,6 +58,7 @@
                              <div class="col-md-2">Filter By</div>
                              <div class="col-md-4"><input type="text"/></div>
                          </div>
+                         <hr/>
                         <!---Table-->
                         <div class="table-responsive">
                             <table class="table">
@@ -75,7 +77,7 @@
                                         <td>{{pr.productCode}}</td>
                                         <td>{{pr.productDesc}}</td>
                                         <td>{{pr.price}}</td>
-                                        <td><input type="button" value="Add to cart" class="btn btn-success"></td>
+                                        <td><input type="button" value="Add to cart" class="btn btn-success" ng-click="hello()"></td>
                                     </tr>
                                 </tbody>
                             </table>
