Pass selected item to angular function.

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                                         <td>{{pr.productCode}}</td>
                                         <td>{{pr.productDesc}}</td>
                                         <td>{{pr.price}}</td>
-                                        <td><input type="button" value="Add to cart" class="btn btn-success" ng-click="hello()"></td>
+                                        <td><input type="button" value="Add to cart" class="btn btn-success" ng-click="add(pr)"></td>
                                     </tr>
                                 </tbody>
                             </table>
